--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@400;600&display=swap');
+
+body{
+    font-family: 'Arima', cursive;
+}
 .nav-style , .card-color{
     background-color: #999999!important;
 }
